fixing horizontal scrollbar

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ a {
 }
 
 body {
-    width: 100%;
+    width: ;
     font-family: 'Overpass', sans-serif;
     
 }
@@ -707,6 +707,9 @@ footer a {
 }
 
 @media screen and (max-width: 375px){
+    body {
+        width: 100vw;
+    }
     .header-content {
         padding: 3.5em 1em;
     }
@@ -768,6 +771,9 @@ footer a {
     }
     .second-right-body {
         font-size: 1em;
+    }
+    .third {
+        overflow: hidden;
     }
     .third-left {
         margin: 0px;
